--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libinput (1.26.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Tue, 11 Jun 2024 13:10:28 +0300
+
 libinput (1.25.0-1) unstable; urgency=medium
 
   * New upstream release.
