--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ libinput (1.26.0-1) UNRELEASED; urgency=medium
   * New upstream release.
   * watch: Updated.
   * symbols: Updated.
+  * rules, install: Install udev files under /usr. (Closes: #1064396)
 
  -- Timo Aaltonen <tjaalton@debian.org>  Tue, 11 Jun 2024 13:10:28 +0300
 
