--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libinput (1.26.0-1) UNRELEASED; urgency=medium
+libinput (1.26.0-1) unstable; urgency=medium
 
   * New upstream release.
   * watch: Updated.
@@ -6,7 +6,7 @@ libinput (1.26.0-1) UNRELEASED; urgency=medium
   * rules, install: Install udev files under /usr. (Closes: #1064396)
   * control: Migrate to pkgconf.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Tue, 11 Jun 2024 13:10:28 +0300
+ -- Timo Aaltonen <tjaalton@debian.org>  Tue, 11 Jun 2024 13:49:02 +0300
 
 libinput (1.25.0-1) unstable; urgency=medium
 
