--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libinput (1.26.2-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Thu, 26 Sep 2024 13:30:48 +0300
+
 libinput (1.26.0-1) unstable; urgency=medium
 
   * New upstream release.
