--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-libinput (1.26.2-1) UNRELEASED; urgency=medium
+libinput (1.26.2-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Timo Aaltonen <tjaalton@debian.org>  Thu, 26 Sep 2024 13:30:48 +0300
+ -- Timo Aaltonen <tjaalton@debian.org>  Sat, 28 Sep 2024 10:13:18 +0300
 
 libinput (1.26.0-1) unstable; urgency=medium
 
